# eva-nirvana

./: ChangeLog  NEWS  TODO  configure.in.in  eva.kdevelop  eva.kdevelop.spec  eva.kdevses
doc/en/: Makefile.am  index.docbook
eva/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  README.zh  autogen.sh  configure.in.in  eva.kdevelop  eva.kdevses
eva/doc/: Makefile.am
eva/po/: eva.pot
eva/src/: citylist  eva.desktop  evaaddingmanager.cpp  evachatwindowmanager.cpp  evacontactmanager.cpp  evadcopactions.h  evaidt.cpp  evaloginmanager.cpp  evamain.h  (+6 more)
eva/src/api/: Makefile.am  customface.h  evaapi.h  evaconnecter.cpp  evadcopcontacts.h  evahtmlparser.cpp  evahtmlparser.h  evaipaddress.cpp  evaipaddress.h  evanetwork.h  evapacketmanager.cpp  evapacketmanager.h  evapicmanager.cpp  evapicmanager.h  evaqtutil.cpp  evaqtutil.h  evaresource.cpp  evaresource.h  evaservers.cpp  evaservers.h  evasetting.cpp  evasocket.cpp  evauhmanager.cpp  evauser.cpp  evauser.h  evausersetting.cpp  evausersetting.h  regiongrabber.cpp
eva/src/api/filetrans/: Makefile.am  evacachedfile.cpp  evafiledownloader.cpp  evafilemanager.cpp  evafilemanager.h
eva/src/image/face/: Makefile.am
eva/src/libeva/: Makefile.am  evaaddfriend.cpp  evaaddfriendex.cpp  evacrypt.h  evadefines.h  evaextrainfo.cpp  evafriend.cpp  evafriendlist.cpp  evafriendlist.h  evagroup.cpp  evaimreceive.cpp  evaimreceive.h  evaimsend.cpp  evaimsend.h  evakeyrequest.cpp  evalogin.cpp  evalogin.h  evamemo.cpp  evamemo.h  evapacket.cpp  evaqun.cpp  evaqunlist.cpp  evaqunlist.h  evasearchuser.cpp  evasearchuser.h  evauserinfo.cpp  evauserinfo.h  evautil.cpp  evaweather.cpp  evaweather.h  libeva.h
eva/src/libeva/libcustompic/: Makefile.am  evapicpacket.cpp  evarequestagent.h  evarequestface.h  evarequeststart.cpp  evarequeststart.h  evatransfer.cpp
eva/src/libeva/libft/: evaftpacket.cpp  evaftpacket.h  evaftprotocols.cpp  evaftprotocols.h
eva/src/libeva/libuh/: Makefile.am  evauhpacket.cpp  evauhpacket.h  evauhprotocols.cpp
eva/src/ui/: Makefile.am  createsmileyui.cpp  createsmileywindow.cpp  customfacemanagerui.cpp  customfacemanagerui.h  customfaceselector.cpp  customfaceuibase.cpp  customfaceuibase.h  evaaddingnoticeuibase.h  evaaddingnoticewindow.cpp  evaaddingnoticewindow.h  evaaddingwindow.h  evaaddqunuibase.cpp  evaaddqunuibase.h  evaaddqunwindow.cpp  evaadduibase.cpp  evaadduibase.h  evachatuibase.cpp  evachatuibase.h  evachatview.cpp  evachatwindow.cpp  evachatwindow.h  evacontactlistview.cpp  evacontactlistview.h  evadetailswindow.cpp  evafilepanel.cpp  evafilepanel.h  evafilestatusuibase.cpp  evafilestatusuibase.h  evafontselecter.cpp  evahistoryuibase.h  evahistoryviewer.cpp  evahistoryviewer.h  evalistview.cpp  evaloginveriuibase.h  evaloginwindow.cpp  evaloginwindow.h  evamainuibase.cpp  evamainuibase.h  evamainwindow.cpp  (+40 more)
po/: eva.pot
src/: Makefile.am  eva.desktop  eva.rc  evaaddingmanager.cpp  evaaddingmanager.h  evachatwindowmanager.cpp  evachatwindowmanager.h  evacontactmanager.cpp  evacontactmanager.h  evadcoptools.h  evaguimain.cpp  evaguimain.h  evaidt.h  evaloginmanager.cpp  evaloginmanager.h  evamain.cpp  evamain.h  evascriptmanager.cpp  evascriptmanager.h  evasysmsgmanager.cpp  evasysmsgmanager.h  evasystemtray.cpp  evasystemtray.h  evaui.rc  main.cpp  qun-category  servers  src.pro
src/api/: customface.cpp  customface.h  evaapi.h  evaconnecter.cpp  evaconnecter.h  evadcopcontacts.h  evagraphicverifycode.h  evahtmlparser.cpp  evahtmlparser.h  evaipaddress.cpp  evaipaddress.h  evaipseeker.cpp  evaipseeker.h  evanetwork.cpp  evanetwork.h  evanetworkpolicy.cpp  evanetworkpolicy.h  evapacketmanager.cpp  evapacketmanager.h  evapicmanager.cpp  evapicmanager.h  evaqtutil.cpp  evaqtutil.h  evaresource.cpp  evaresource.h  evaservers.cpp  evaservers.h  evasession.cpp  evasession.h  evasetting.cpp  evasetting.h  evasocket.cpp  evasocket.h  evauhmanager.cpp  evauhmanager.h  evauser.cpp  evauser.h  evausersetting.cpp  evausersetting.h  qmdcodec.cpp  (+3 more)
src/api/filetrans/: evacachedfile.cpp  evacachedfile.h  evafiledownloader.cpp  evafiledownloader.h  evafilemanager.cpp  evafilemanager.h
src/image/: Makefile.am
src/image/face/: face.theme
src/image/smiley/: smiley.theme
src/image/theme/: Makefile.am  login.mng
src/libeva/: evaaddfriend.cpp  evaaddfriend.h  evaaddfriendex.h  evaadvancedsearch.cpp  evaadvancedsearch.h  evacrypt.cpp  evadefines.h  evaextrainfo.cpp  evaextrainfo.h  evafriend.cpp  evafriend.h  evafriendlist.cpp  evafriendlist.h  evagroup.cpp  evagroup.h  evaimreceive.cpp  evaimreceive.h  evaimsend.cpp  evaimsend.h  evakeyrequest.cpp  evakeyrequest.h  evalevel.cpp  evalevel.h  evalogin.cpp  evalogin.h  evalogintoken.cpp  evalogintoken.h  evamemo.cpp  evamemo.h  evaonlinestatus.cpp  evaonlinestatus.h  evapacket.cpp  evapacket.h  evaqun.cpp  evaqun.h  evaqunlist.cpp  evaqunlist.h  evasearchuser.cpp  evasearchuser.h  evauserinfo.h  (+3 more)
src/libeva/libcustompic/: evapicpacket.cpp  evapicpacket.h  evarequestagent.cpp  evarequestagent.h  evarequestface.cpp  evarequestface.h  evarequeststart.h  evatransfer.h
src/libeva/libft/: Makefile.am  evaftpacket.cpp  evaftpacket.h  evaftprotocols.cpp  evaftprotocols.h
src/libeva/libuh/: evauhpacket.cpp  evauhpacket.h  evauhprotocols.cpp  evauhprotocols.h
src/ui/: Makefile.am  createsmileyui.cpp  createsmileyui.h  createsmileywindow.cpp  createsmileywindow.h  customfacemanagerui.cpp  customfacemanagerui.h  customfaceselector.cpp  customfaceselector.h  customfaceuibase.cpp  customfaceuibase.h  defines.h  evaaddingnoticeuibase.cpp  evaaddingnoticeuibase.h  evaaddingnoticewindow.cpp  evaaddingnoticewindow.h  evaaddingwindow.cpp  evaaddingwindow.h  evaaddqunuibase.cpp  evaaddqunuibase.h  evaaddqunwindow.cpp  evaaddqunwindow.h  evaadduibase.cpp  evaadduibase.h  evachatuibase.cpp  evachatuibase.h  evachatview.cpp  evachatview.h  evachatwindow.cpp  evachatwindow.h  evacontactlistview.cpp  evacontactlistview.h  evadcopview.h  evadetailswindow.cpp  evadetailswindow.h  evadisplaywidget.cpp  evadisplaywidget.h  evafilestatusuibase.h  evafontselecter.cpp  evafontselecter.h  (+84 more)
(+13 files in other folders)
