themedir = $(kde_datadir)/eva/image/theme
theme_DATA = addfriend.png addgroup.png changeuser.png chat.png close.png \
				delfriend.png delgroup.png detailslogo.png details.png downloadgroup.png \
				downloadhistory.png evalogo.png eva.png eva.theme find.png font.png italic.png bold.png \
				underline.png group.png history.png invisible.png leave.png login.mng logo.png \
				msg.png na.png offline.png online.png open.png qq.png quickreply.png quit.png \
				qun.png refreshbuddies.png refresh.png rename.png search.png settinglogo.png \
				showall.png showonline.png smiley.png sysmsg.png sysoption.png syssetting.png \
				uploadgroup.png uploadhistory.png creator.png admin.png time_moon.png time_star.png \
				time_sun.png custom_smiley.png screen_shot.png qunexit.png qunlogo.png \
				hide_portrait.png show_portrait.png shareholder.png qq_album.png qq_home.png qq_shop.png \
				msg_info.png file_transfer.png send_image.png details_basic_info.png \
				details_description.png details_details.png setting_close.png setting_open.png sys_close.png \
				sys_open.png memo.png background.png qun_card.png contact.png quns.png \
	script_about.png script_config.png script_install.png script_run.png script_stop.png \
	script_uninstall.png script.png



