facedir = $(kde_datadir)/eva/image/face
face_DATA = 10off.png 10.png 11off.png 11.png 12off.png 12.png 13off.png 13.png \
	14off.png 14.png 15off.png 15.png 16off.png 16.png 17off.png 17.png 18off.png \
	18.png 19off.png 19.png 1off.png 1.png 20off.png 20.png 21off.png 21.png \
	22off.png 22.png 23off.png 23.png 24off.png 24.png 25off.png 25.png 26off.png \
	26.png 27off.png 27.png 28off.png 28.png 29off.png 29.png 2off.png 2.png \
	30off.png 30.png 31off.png 31.png 32off.png 32.png 33off.png 33.png 34off.png \
	34.png 35off.png 35.png 36off.png 36.png 37off.png 37.png 38off.png 38.png \
	39off.png 39.png 3off.png 3.png 40off.png 40.png 41off.png 41.png 42off.png \
	42.png 43off.png 43.png 44off.png 44.png 45off.png 45.png 46off.png 46.png \
	47off.png 47.png 48off.png 48.png 49off.png 49.png 4off.png 4.png 50off.png \
	50.png 51off.png 51.png 52off.png 52.png 53off.png 53.png 54off.png 54.png \
	55off.png 55.png 56off.png 56.png 57off.png 57.png 58off.png 58.png 59off.png \
	59.png 5off.png 5.png 60off.png 60.png 61off.png 61.png 62off.png 62.png \
	63off.png 63.png 64off.png 64.png 65off.png 65.png 66off.png 66.png 67off.png \
	67.png 68off.png 68.png 69off.png 69.png 6off.png 6.png 70off.png 70.png \
	71off.png 71.png 72off.png 72.png 73off.png 73.png 74off.png 74.png 75off.png \
	75.png 76off.png 76.png 77off.png 77.png 78off.png 78.png 79off.png 79.png \
	7off.png 7.png 80off.png 80.png 81off.png 81.png 82off.png 82.png 83off.png \
	83.png 84off.png 84.png 85off.png 85.png 86off.png 86.png 87off.png 87.png \
	88off.png 88.png 89off.png 89.png 8off.png 8.png 90off.png 90.png 91off.png \
	91.png 92off.png 92.png 93off.png 93.png 94off.png 94.png 95off.png 95.png \
	96off.png 96.png 9off.png 9.png 97off.png 97.png 98off.png 98.png 99off.png \
	99.png 100off.png 100.png 101off.png 101.png face.theme 102off.png 102.png \
	103off.png 103.png 104off.png 104.png 105off.png 105.png 106off.png 106.png \
	107off.png 107.png 108off.png 108.png 109off.png 109.png 110off.png 110.png \
	111off.png 111.png 112off.png 112.png 113off.png 113.png 114off.png 114.png \
	115off.png 115.png 116off.png 116.png 117off.png 117.png 118off.png 118.png \
	119off.png 119.png 120off.png 120.png 121off.png 121.png 122off.png 122.png \
	123off.png 123.png 124off.png 124.png 125off.png 125.png 126off.png 126.png \
	127off.png 127.png 128off.png 128.png 129off.png 129.png 130off.png 130.png \
	131off.png 131.png 132off.png 132.png 133off.png 133.png 134off.png 134.png \
	Makefile.am Makefile.in
